--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "geektrust",
   "license": "ISC",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "mocha": "^10.0.0",
     "moment": "^2.29.3"
   }
